# uniqdiff

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SERVICES.md  SUPPORT.md  UNIQDIFF_ENGINE_REPORT.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  profile_modes.py  run.py
benchmarks/comparison/: README.md  __init__.py  data.py  measure.py  models.py  report.py  run.py
benchmarks/comparison/adapters/: __init__.py  base.py  csvdiff_adapter.py  datacompy_adapter.py  duckdb_adapter.py  pandas_adapter.py  uniqdiff_adapter.py  utils.py
docs/: README.md  api-reference.md  auto-mode.md  backend-behavior.md  backward-compatibility.md  benchmarks.md  bloom-filters.md  ci.md  cli.md  connectors.md  disk-mode.md  engine-boundary.md  external-sort.md  file-result-mode.md  fuzzy.md  hash-partitioning.md  limitations-security.md  migration-guide.md  performance.md  profiling.md  property-based-tests.md  public-api.md  quick-start.md  recipes.md  release-1.0.md  release-1.1.md  release-notes-1.0.md  release-notes-1.1.md  release-process.md  result-schema.md  stable-engine-contract.md  streaming-diff.md  uniqtools-concept.md
docs/schemas/: uniqdiff-jsonl-1.0.schema.json
examples/: basic.py
examples/uniqrowdiff_prototype/: README.md  rowdiff.py
examples/uniqtools_starter/: README.md  engine_adapter.py
src/uniqdiff/: __init__.py  __main__.py  _typing.py  _utils.py  _version.py  bloom.py  cli.py  core.py  disk.py  exceptions.py  fields.py  fuzzy.py  normalizers.py  output.py  planner.py  result.py  schema.py  streaming.py  tokens.py
src/uniqdiff/connectors/: __init__.py  base.py  files.py  registry.py
src/uniqdiff/engine/: __init__.py
src/uniqdiff/io/: __init__.py  readers.py
src/uniqdiff/output/: __init__.py  events.py  jsonl.py  result_files.py
src/uniqdiff/storage/: __init__.py  codec.py  external_sort.py  memory.py  partition.py  protocols.py  sqlite.py
src/uniqdiff/strategies/: __init__.py
tests/: test_bloom.py  test_cli.py  test_connectors.py  test_core.py  test_disk_mode.py  test_docs.py  test_engine_facade.py  test_events.py  test_fields.py  test_file_result_mode.py  test_files.py  test_fuzzy.py  test_memory_backend.py  test_planner.py  test_properties.py  test_public_api.py  test_schema.py  test_storage_codec.py  test_streaming.py  test_tokens.py
tests/fixtures/: dupes.txt  left.csv  left.tsv  left_no_header.csv  left_semicolon.csv  right.csv  right.jsonl  right.tsv  right_no_header.csv  right_semicolon.csv
tools/: README.md
tools/uniqrowdiff/: README.md  pyproject.toml
tools/uniqrowdiff/src/uniqrowdiff/: __init__.py  __main__.py  cli.py  rowdiff.py
tools/uniqrowdiff/tests/: test_rowdiff.py
