[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uniqrowdiff"
version = "0.1.0"
description = "Row-level changed-field analysis built on top of uniqdiff."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "UniqTools maintainers" }
]
dependencies = [
  "uniqdiff>=1.0,<2.0",
]

[project.scripts]
uniqrowdiff = "uniqrowdiff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uniqrowdiff = ["py.typed"]
